# semantic-scholar-rs

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: client.rs  error.rs  lib.rs
src/models/: author.rs  mod.rs  paper.rs
tests/: integration_test.rs  mcp_e2e_test.rs  models_test.rs
