[package]
name = "semantic-scholar-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Unofficial Rust SDK and MCP server for the Semantic Scholar API"
license = "MIT"
repository = "https://github.com/ynishi/semantic-scholar-rs"
homepage = "https://github.com/ynishi/semantic-scholar-rs"
documentation = "https://docs.rs/semantic-scholar-rs"
readme = "README.md"
keywords = ["semantic-scholar", "academic", "papers", "mcp", "api"]
categories = ["api-bindings", "science"]

[lib]
name = "semantic_scholar"

[[bin]]
name = "semantic-scholar-mcp"
path = "src/bin/mcp.rs"
required-features = ["mcp"]

[features]
default = []
mcp = ["dep:rmcp", "dep:schemars"]
integration-test = []

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# MCP dependencies (optional)
rmcp = { version = "0.15", features = ["server", "transport-io"], optional = true }
schemars = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
